<resources>
    <string name="app_name">IITK-CrVI</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="legalInformation">Legal Information</string>
    <string name="copyrightMessage">Copyright © ffem</string>

    <!-- Software notices -->
    <string name="software_notices">Software Notices</string>
    <string name="apache_license_2">Apache License 2.0</string>
    <string name="mit_license">MIT License</string>
    <string name="cca_license">CC BY 4.0 International</string>
    <string name="eclipse_public_license">Eclipse Public License 1.0</string>

    <string name="select_water_type">Select water type</string>

    <string name="app_not_found">App not found</string>
    <string name="install_app">%s app is required to launch the test.\n\nYou can install the app from Play store.</string>
    <string name="go_to_play_store">Go to Play store</string>

    <string name="input_water">Input Water</string>
    <string name="output_water">Output Water</string>
    <string name="electrocoagulation">Electrocoagulation</string>
    <string name="electrocoagulation_recommendation"><![CDATA[Allow treatment time of <b>%s</b> with 40 mA of current for  <b>%d L</b> of water]]></string>
    <string name="iron_sulphate_recommendation"><![CDATA[Add <b>%s</b> of FeSO4 salt to <b>%d L</b> of water]]></string>

    <string name="versionExpired">Version expired</string>
    <string name="thisVersionHasExpired">This version of the app has expired.</string>
    <string name="uninstallAndInstallFromStore">Please uninstall and then install the latest version from Play Store.</string>
    <string name="ok">OK</string>

    <string name="enter_water_quantity">Water quantity</string>
    <string name="litres">Litres</string>
    <string name="chemical_coagulation">Chemical coagulation</string>
    <string name="mg_l">mg/l</string>
    <string name="navigate_up">Navigate up</string>
    <string name="info">Info</string>
    <string name="result">Result</string>
    <string name="unsafe">Unsafe</string>
    <string name="low_risk">Low Risk</string>
    <string name="chromium_vi_content_is_low">Chromium (VI) content is below the maximum contaminant level for drinking water.</string>
    <string name="standard_by_epa">Standard by Environmental Protection Agency (EPA)</string>
    <string name="water_should_be_treated">Water should be treated before drinking.</string>

    <!--App Update-->
    <string name="update_ready">Update is ready to install</string>
    <string name="update_download_fail">Unable to download update</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>
</resources>
