<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-black"
                android:textAllCaps="true"
                android:textColor="#222"
                android:textSize="15sp"
                android:textStyle="normal"
                tools:text="Chromium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    tools:text="20.59" />

                <TextView
                    android:id="@+id/text_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/mg_l"
                    android:textColor="#666"
                    android:textIsSelectable="false"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/water_quantity_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:minWidth="200dp"
        android:padding="20dp"
        android:text="@string/enter_water_quantity"
        android:textColor="#444"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/chemical_coagulation"
                android:textAllCaps="true"
                android:textColor="#222"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/recommendation1Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:lineSpacingExtra="5dp"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:textAlignment="textStart"
                android:textColor="#666"
                android:textSize="16sp"
                tools:text="@string/iron_sulphate_recommendation" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/electrocoagulation"
                android:textAllCaps="true"
                android:textColor="#222"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/recommendation2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#fff"
                android:lineSpacingExtra="5dp"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:textAlignment="textStart"
                android:textColor="#666"
                android:textSize="16sp"
                tools:text="@string/electrocoagulation_recommendation" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>